RESOLVED FIXED311627
Fix radii for non-auto outline
https://bugs.webkit.org/show_bug.cgi?id=311627
Summary Fix radii for non-auto outline
Anne van Kesteren
Reported 2026-04-07 01:13:44 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-04-07 01:16:44 PDT
EWS
Comment 2 2026-04-08 09:48:11 PDT
Committed 310784@main (4894d8539f31): <https://commits.webkit.org/310784@main> Reviewed commits have been landed. Closing PR #62178 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-08 09:49:12 PDT
Note You need to log in before you can comment on or make changes to this bug.