Fix radii for non-auto outline https://bugs.webkit.org/show_bug.cgi?id=311627

Reviewed by Simon Fraser.

Non-auto outlines with negative outline-offset and border-radius kept
the full border-box radii instead of shrinking them inward. The root
cause was BorderShape::shapeForOutsetRect clamping per-side deltas to
zero, which meant inward offsets had no effect on radii.

Since radii.expand() already clamps each component to zero internally,
the fix is removing the std::max(..., 0) on the deltas. This also makes
shapeForInsetRect redundant — its only caller (BackgroundPainter for
negative box-shadow spread) now uses the unified method. Renamed to
shapeForOffsetRect and extracted shared helpers zeroRadiiForOpenEdges
and applyClosedEdges.

Test: fast/css/outline-border-radius-negative-offset.html
Canonical link: https://commits.webkit.org/310784@main